# lox-interpreter-cpp

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  GRAMMAR.md  README.md  vcpkg.json
docs/: CLOSURES.md
src/: CMakeLists.txt
src/bytecode-vm/: Chunk.hpp  CodegenVisitor.cpp  CodegenVisitor.hpp  Constants.hpp  Disassembler.hpp  OpCode.hpp  RunContext.hpp  VM.hpp  Value.hpp  ValueStack.hpp  main.cpp
src/frontend/: CLIArgs.hpp  ExprResolveVisitor.cpp  ExprResolveVisitor.hpp  Frontend.cpp  Frontend.hpp  FrontendErrors.hpp  Importer.hpp  Parser.hpp  ResolveVisitor.cpp  ResolveVisitor.hpp  Resolver.hpp  Scanner.hpp  StmtResolveVisitor.cpp  StmtResolveVisitor.hpp  TokenIterator.hpp  setup_builtins.hpp
src/llvm-jit/: IRGen.hpp  IRGenVisitor.cpp  IRGenVisitor.hpp  main.cpp
src/lox-common/: Builtins.cpp  Builtins.hpp  CommonVisitors.hpp  Environment.cpp  ErrorReporter.hpp  ErrorReporter2.hpp  ErrorSender.hpp  ExprVisitors.cpp  ExprVisitors.hpp  FieldName.hpp  IError.hpp  JustTheThing.hpp  JustTheThing2.hpp  LiteralValue.hpp  SourceLocation.hpp  Stmt.hpp  StmtVisitors.cpp  StmtVisitors.hpp  Token.hpp  TokenType.hpp  Utils.hpp  Value.cpp  Value.hpp  VariantWrapper.hpp
src/lox-shared/: ErrorReporter.cpp  ErrorReporter.hpp  Errors.hpp  Expr.hpp  ExprInterpreterVisitor.cpp  ExprInterpreterVisitor.hpp  ExprResolveVisitor.cpp  ExprResolveVisitor.hpp  ExprVisitors.cpp  ExprVisitors.hpp  IExpr.hpp  IVisitable.hpp  Stmt.hpp  StmtInterpreterVisitor.cpp  StmtResolveVisitor.cpp  StmtResolveVisitor.hpp  StmtVisitors.cpp  StmtVisitors.hpp
src/tree-walker/: Builtins.cpp  Builtins.hpp  CMakeLists.txt  ContextError.hpp  EnumUtils.hpp  Environment.cpp  Environment.hpp  ErrorReporter.hpp  Errors.hpp  Expr.cpp  Expr.hpp  ExprInterpreterVisitor.cpp  ExprInterpreterVisitor.hpp  ExprResolveVisitor.cpp  ExprResolveVisitor.hpp  ExprVisitors.cpp  ExprVisitors.hpp  FieldName.hpp  IExpr.hpp  IStmt.hpp  InterpretVisitor.cpp  InterpretVisitor.hpp  Interpreter.hpp  InterpreterError.hpp  LiteralValue.hpp  Object.cpp  Object.hpp  ObjectImpl.hpp  Parser.hpp  Resolver.hpp  RunContext.hpp  Scanner.hpp  Stmt.hpp  StmtInterpreterVisitor.cpp  StmtInterpreterVisitor.hpp  StmtResolveVisitor.cpp  StmtResolveVisitor.hpp  StmtVisitors.cpp  StmtVisitors.hpp  Token.hpp  (+7 more)
tests/: CMakeLists.txt
tests/lox/: README.md
tests/lox/closures/: capture_global.lox  capture_local.lox  circular_recursion.lox
tests/lox/import/: conditional_import.lox  fail_scan.lox  import_fail_scan.lox  math.lox  scoped_import.lox  scoped_import_in_fun.lox  sqr.lox  use_math.lox
tests/tree-walker/: Expr.test.cpp  Scanner.test.cpp
